[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Revolver.gd" type="Script" id=1]
[ext_resource path="res://scenes/RevolverChamber.tscn" type="PackedScene" id=2]

[node name="Revolver" type="Node"]

script = ExtResource( 1 )

[node name="RevolverChamber_0" parent="." index="0" instance=ExtResource( 2 )]

[node name="RevolverChamber_1" parent="." index="1" instance=ExtResource( 2 )]

[node name="RevolverChamber_2" parent="." index="2" instance=ExtResource( 2 )]

[node name="RevolverChamber_3" parent="." index="3" instance=ExtResource( 2 )]

[node name="RevolverChamber_4" parent="." index="4" instance=ExtResource( 2 )]

[node name="RevolverChamber_5" parent="." index="5" instance=ExtResource( 2 )]


